src/index.css
body {
  background-color: #0e0e10;
  margin: 0px;
  color: white;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
}

html {
  overflow: -moz-scrollbars-vertical; 
  overflow-y: scroll;
}

.aboutContainer {
  display: flex;
  flex-flow: wrap;
  flex-direction: column;
}

.aboutItem {
  overflow: auto;
  margin: 2rem auto;
  border: 0.2rem solid;
  border-radius: 1rem;
  border-color: rgba(255, 255, 255, 0.7);
  background-color: rgb(38 38 38);
  opacity: 93%;
  max-width: 1080px;
  height: 12.5rem;
}

.aboutItem h2 {
  margin: 0.5rem auto;
  text-align: center;
}

.aboutItem p {
  margin-bottom: 0.5rem;
  margin-left: 0.6rem;
  line-height: 2;
}

.inlineLink {
  display: inline;
  margin-top: 0.5rem;
  color: white;
  opacity: 50%;
  white-space: nowrap;
}

.defaultText {
  color: white;
  margin: 18rem auto;
  font-size: 1.2rem;
  text-align: center;
}

.listHeader {
  margin-top: 1rem;
  display: flex;
}

.listTitle {
  margin: 1rem auto;
}

.headerButtons :hover {
  cursor: pointer;
}

.addDemonButton {
  position: absolute;
  right: 0.5rem;
  text-decoration: none;
  padding: 1rem 3rem;
  font-family: inherit;
  border-radius: 0.5rem;
  font-weight: bold;
  font-size: 1rem;
  background-color: rgb(255, 255, 255);
  outline-style: solid;
  outline-color: rgb(0, 0, 0);
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
}

.filterDemonButton {
  margin-left: 0.5rem;
  border-radius: 0.5rem;
  padding: 1rem 3rem;
  font-family: inherit;
  font-weight: bold;
  font-size: 1rem;
  background-color: rgb(255, 255, 255);
  outline-style: solid;
  outline-color: rgb(0, 0, 0);
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
}

.addDemonButton:hover {
  cursor: pointer;
  background-color: rgb(228, 226, 226);
}

.filterDemonButton:hover {
  cursor: pointer;
  background-color: rgb(228, 226, 226);
}

.emptyList {
  text-align: center;
  color: white;
  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  font-weight: bold;
  font-size: 1.5rem;
}

.demonList {
  display: grid;
  place-items: center;
}

.demonList ul {
  margin: 0 auto;
  padding: 0;
}

.modal {
  display: flex;
  flex-direction: row;
  width: 60rem;
  height: 20rem;
  margin: auto;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1;
  padding: 1rem;
  border-radius: 1rem;
  border-color: rgba(0, 0, 0, 0.7);
  background-color: rgb(54, 54, 54);
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
  animation: slide-down-fade-in 0.3s ease-out forwards;
}

.filterModal {
  display: flex;
  flex-direction: column;
  width: 40rem;
  height: 8rem;
  margin: auto;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1;
  padding: 1rem;
  border-radius: 1rem;
  border-color: rgba(0, 0, 0, 0.7);
  background-color: rgb(54, 54, 54);
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
  animation: slide-down-fade-in 0.3s ease-out forwards;
}

.filterModal label {
  display: block;
  margin: 0 auto;
  font-size: 1.5rem;
}

.filterModal select {
  width: 25%;
  margin: 1rem auto;
  font-family: inherit;
}

.filterModalButtons {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.filterModal button {
  font-family: inherit;
  color: white;
  background-color: rgb(40, 40, 40);
  font-size: 1rem;
  text-decoration: none;
  padding: 0.5rem;
  border: 0.2rem solid white;
  border-radius: 0.5rem;
  width: 20%;
  margin: 0.2rem auto;
}

.filterModal button:hover {
  cursor: pointer;
}

.modalBackdrop {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0,0,0,0.2);
}

.modal img {
  display: block;
  height: 60%;
  margin-top: 3.5rem;
  margin-right: 4rem;
}

.infoContainer {
  display: block;
  background-color: rgb(40, 40, 40);
  border: 1rem solid rgb(40, 40, 40);
  border-radius: 1rem;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 48%;
  word-break: break-all;
}

.infoContainer h1 {
  margin: 0 auto;
  text-align: center;
}

.infoContainer h4 {
  margin-top: 0;
  text-align: center;
  opacity: 70%;
}

.infoContainer h3 {
  font-size: 1rem;
  text-align: center;
}

.modalButtonsContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-left: 2.5rem;
  margin-bottom: 2.5rem;
}

.modalButton {
  font-family: inherit;
  color: white;
  background-color: rgb(40, 40, 40);
  font-size: 1rem;
  text-decoration: none;
  padding: 1rem 2rem;
  margin-top: 2rem;
  border: 0.2rem solid white;
  border-radius: 0.5rem;
  width: 90%;
}

.modalButton:hover {
  cursor: pointer;
}

.removeUnderline {
  text-decoration: none;
  color: black;
}

.removeUnderlineWhite {
  display: block;
  width: 100%;
  height: 100%;
  text-decoration: none;
  color: white;
}

@keyframes slide-down-fade-in {
  from {
    opacity: 0;
    transform: translateY(-3rem);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes slide-up-fade-in {
  from {
    opacity: 0;
    transform: translateY(3rem);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes slide-right-fade-in {
  from {
    opacity: 0;
    transform: translateX(-3rem);
  }
  to {
    opacity: 1;
    transform: translateX(0);
  }
}

